# rag_platform

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml  readme.MD  requirements-cpu.txt  setup.py
.github/: README.md
.github/workflows/: ci-cd.yml  simple-build.yml
docs/api-contracts/phase-2/: document-processing-api.yaml
docs/architecture/phase-2/: implementation-roadmap.md  service-architecture.md
docs/database-schema/: README.md
docs/database-schema/phase-2/: database-schema-diagram.md  document-processing-schema.sql
scripts/: run_tests.ps1  run_tests.sh  start_services.ps1  start_services.sh
src/app/: main.py
src/llm_service/api/v1/endpoints/: generate.py
src/llm_service/domain/: models.py  service.py
src/orchestrator/api/v1/endpoints/: query.py
src/orchestrator/domain/: models.py  service.py
src/retrieval_service/: __init__.py
src/retrieval_service/adapters/: __init__.py
src/retrieval_service/api/v1/endpoints/: retrieve.py
src/retrieval_service/domain/: models.py  service.py
tests/unit/llm_service/: test_generate_endpoint.py
tests/unit/orchestrator/: test_orchestrator_endpoint.py  test_query_endpoint.py  test_real_integration.py
tests/unit/retrieval/: test_retrieve_endpoint.py
