[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.42.0", "Cython>=3.0.8"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-platform"
version = "0.1.0"
description = "Enterprise RAG Platform - Phase 1 MVP"
authors = [{name = "RAG Platform Team", email = "team@ragplatform.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.109.1",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.6.4",
    "redis==5.0.3",
    "python-dotenv==1.0.0",
    "httpx==0.27.0",
    # CPU-only sentence transformers (much lighter)
    "sentence-transformers==2.3.1",
    # CPU-only FAISS (no CUDA)
    "faiss-cpu==1.12.0",
    # Lightweight ranking
    "rank-bm25==0.2.2",
    # Observability
    "opentelemetry-sdk==1.22.0",
    # CPU-only transformers (no torch CUDA)
    "transformers>=4.30.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    # CPU-only PyTorch (much smaller) - install via index URL
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
]

[project.optional-dependencies]
dev = ["rag-platform[test]", "rag-platform[lint]", "pre-commit>=3.6.0"]
test = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "locust==2.20.2",
]
lint = [
    "black==23.12.1",
    "isort==5.13.2",
    "ruff==0.2.2",
    "mypy==1.8.0",
    "types-redis>=4.6.0.20241004"

]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
    "-v"
]

[tool.black]
line-length = 88
target-version = ['py312']  # Changed from py311

[tool.ruff]
line-length = 88
target-version = "py312"  # Changed from py311

[tool.mypy]
python_version = "3.12"  # Changed from 3.11
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true
explicit_package_bases = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
